<resources>
    <string name="app_name">Rhyme a Zoo</string>
    <string name="action_settings">Settings</string>
    <string name="avatar">avatar</string>
    <string name="username">John</string>
    <string name="home_rhymes">home_rhymes</string>
    <string name="home_zoo">home_zoo</string>
    <string name="home_bank">home_bank</string>
    <string name="home_zookeeper">home_zookeeper</string>
    <string name="home_logout">home_logout</string>

    <string name="go_home">go_home</string>

    <string name="bank_repeat">bank_repeat</string>
    <string name="no_coins">no coins</string>
    <string name="no_coins_emote">no coins emote</string>
    <string name="bank_earned_total">earned total</string>

    <string name="title_activity_avatar">AvatarActivity</string>
    <string name="title_activity_video">VideoActivity</string>

    <string name="list_rhymes">list_rhymes</string>
    <string name="background">background</string>
    <string name="rhyme_illustration">rhyme_illustration</string>
    <string name="rhyme_check">rhyme_check</string>
    <string name="rhyme_forward">rhyme_forward</string>
    <string name="rhyme_backward">rhyme_backward</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="title_activity_quiz_completed">QuizCompletedActivity</string>

    <string name="rhyme_completed">Rhyme Completed</string>
    <string name="title_activity_zoo">ZooActivity</string>

    <string name="zoo_background">Zoo Background</string>
    <string name="title_activity_zoo_section">ZooSectionActivity</string>

    <string name="avatarActivity_avatar">avatar</string>

    <string name="zooSection_kangaroo">Kangaroo</string>
    <string name="zooSection_panda">Panda</string>
    <string name="zooSection_hippo">Hippo</string>
    <string name="zooSection_giraffe">Giraffe</string>
    <string name="zooSection_owl">Owl</string>
    <string name="zooSection_flamingo">Flamingo</string>
    <string name="zooSection_ostrich">Ostrich</string>
    <string name="zooSection_parrot">Parrot</string>
    <string name="zooSection_seal">Seal</string>
    <string name="zooSection_squid">Squid</string>
    <string name="zooSection_dolphin">Dolphin</string>
    <string name="zooSection_shark">Shark</string>
    <string name="zooSection_lion">Lion</string>
    <string name="zooSection_tiger">Tiger</string>
    <string name="zooSection_jaguar">Jaguar</string>
    <string name="zooSection_wolf">Wolf</string>
    <string name="zooSection_rattlesnake">Rattlesnake</string>
    <string name="zooSection_alligator">Alligator</string>
    <string name="zooSection_turtle">Turtle</string>
    <string name="zooSection_iguana">Iguana</string>
    <string name="zooSection_chimp">Chimp</string>
    <string name="zooSection_baboon">Baboon</string>
    <string name="zooSection_gorilla">Gorilla</string>
    <string name="zooSection_monkey">Monkey</string>
    <string name="zooSection_background">Background</string>
</resources>
