<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/MainActivity_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/holo_blue_dark" />

    <ImageView
        android:id="@+id/MainActivity_avatar"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@drawable/avatar" />

    <TextView
        android:id="@+id/MainActivity_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="monospace"
        android:text="@string/username"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/MainActivity_avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <ImageView
        android:id="@+id/MainActivity_rhymes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/home_rhymes"
        app:layout_constraintBottom_toBottomOf="@+id/MainActivity_background"
        app:layout_constraintEnd_toStartOf="@+id/MainActivity_zoo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/MainActivity_background"
        app:layout_constraintTop_toTopOf="@+id/MainActivity_background"
        app:layout_constraintVertical_bias="0.744"
        app:srcCompat="@drawable/home_rhymes" />

    <ImageView
        android:id="@+id/MainActivity_zoo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/home_zoo"
        app:layout_constraintBottom_toBottomOf="@+id/MainActivity_background"
        app:layout_constraintEnd_toStartOf="@+id/MainActivity_bank"
        app:layout_constraintTop_toTopOf="@+id/MainActivity_background"
        app:layout_constraintVertical_bias="0.744"
        app:srcCompat="@drawable/home_zoo" />

    <ImageView
        android:id="@+id/MainActivity_bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/home_bank"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/MainActivity_zookeeper"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714"
        app:srcCompat="@drawable/home_bank" />

    <ImageView
        android:id="@+id/MainActivity_zookeeper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/home_zookeeper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/MainActivity_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.704"
        app:srcCompat="@drawable/home_zookeeper" />

</android.support.constraint.ConstraintLayout>